Archive2/3e/6243755ea2844a/output
g++ (GCC) 4.9.0
Copyright (C) 2014 Free Software Foundation, Inc.
This is free software; see the source for copying conditions.  There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

main.cpp: In function 'int main()':
main.cpp:8:16: error: '<::' cannot begin a template-argument list [-fpermissive]
     std::vector<::std::string> v2;
                ^
main.cpp:8:16: note: '<:' is an alternate spelling for '['. Insert whitespace between '<' and '::'
main.cpp:8:16: note: (if you use '-fpermissive' or '-std=c++11', or '-std=gnu++11' G++ will accept your code)
